# trading212-rs

./: Cargo.toml  README.md
.run/: Clippy.run.xml
examples/: account_details.rs  queries.rs
src/: error.rs  lib.rs
src/models/: account.rs  account_bucket_detailed_response.rs  account_bucket_instrument_result.rs  account_bucket_instruments_detailed_response.rs  account_bucket_result_response.rs  cash.rs  dividend_cache_action.rs  dividend_details.rs  duplicate_bucket_request.rs  enqueued_report_response.rs  exchange.rs  executor.rs  historical_order.rs  history_dividend_item.rs  history_transaction_item.rs  icon.rs  instrument_issue.rs  investment_result.rs  limit_request.rs  market_request.rs  mod.rs  order.rs  order_type.rs  paginated_response_historical_order.rs  paginated_response_history_dividend_item.rs  paginated_response_history_transaction_item.rs  pie_request.rs  place_order_error.rs  position.rs  public_report_request.rs  report_data_included.rs  report_response.rs  stop_limit_request.rs  stop_request.rs  tax.rs  time_event.rs  time_validity.rs  tradeable_instrument.rs  working_schedule.rs
