[package]
name = "trading212"
version = "0.1.1"
edition = "2021"
description = "A library for interacting with the Trading212 API"
license-file = "LICENSE"
repository = "https://github.com/aknarts/trading212-rs"
keywords = ["trading212", "api", "trading"]
categories = ["finance"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
thiserror = "1.0.34"
time = { version = "^0.3", features = ["serde"] }
log = "0.4.20"
uuid = { version = "^1.0", features = ["serde", "v4"] }
serde_with = { version = "3.4.0", features = ["time_0_3"] }

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies.tokio]
version = "1.10"
features = ["full"]

[dev-dependencies]
env_logger = "0.10.1"