[package]
name = "trading212"
version = "0.2.12"
edition = "2021"
description = "A library for interacting with the Trading212 API"
license-file = "LICENSE"
repository = "https://github.com/aknarts/trading212-rs"
keywords = ["trading212", "api", "trading"]
categories = ["finance"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "^2.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
thiserror = "2"
time = { version = "^0.3", features = ["serde", "parsing", "serde-well-known"] }
log = "0.4"
uuid = { version = "^1.0", features = ["serde", "v4"] }
url = { version = "^2.5", features = ["serde"] }
serde_with = { version = "3.4.0", features = ["time_0_3"] }

[dependencies.reqwest]
version = "^0.12"
features = ["json", "multipart"]

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies]
env_logger = "0.11"
